Images added to acticles now have the red 15% opacity overlay. They also have max-width 80% and max-height 50vh, bc I thought this helps readability. Fixed the css of the photo alignment in the editor and the colors of the links in the editor and in the articles.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -146,17 +146,36 @@ time {
   text-decoration: underline;
 }
 
-.link img {
-  width: 80%;
-  max-width: 300px;
+.link img,
+.article-body figure img {
+  max-width: 80%;
   height: auto;
+  max-height: 50vh;
   display: block;
   margin: 10px auto;
   transition: transform 0.2s;
+  position: relative;
 }
 
-.link img:hover {
+.link img:hover,
+.article-body figure img:hover {
   transform: scale(1.008);
+}
+
+.article-body figure {
+  position: relative;
+}
+
+.article-body figure:before {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #f02d0a;
+  opacity: 0.15;
+  z-index: 1;
 }
 
 .article-body h2 {
@@ -211,12 +230,12 @@ time {
   font-size: 25px;
 }
 
-.article-body p .link {
+.article-body p a {
   color: #e69696;
   text-decoration: none;
 }
 
-.article-body p .link:hover {
+.article-body p a:hover {
   text-decoration: underline;
 }
 
@@ -689,6 +708,13 @@ time {
   display: none;
 }
 
+.rdw-image-alignment-options-popup,
+.rdw-image-alignment-option {
+  background: #faa9cb;
+  border: none;
+  margin: 0 8px;
+}
+
 .rdw-block-wrapper .rdw-dropdown-wrapper ul li:nth-child(2) {
   font-size: 1.95em;
 }
@@ -773,6 +799,20 @@ time {
 
 .rdw-editor-main blockquote div:after {
   content: close-quote;
+}
+
+.rdw-link-decorator-wrapper a {
+  color: #e69696;
+  text-decoration: none;
+}
+
+.rdw-link-decorator-wrapper a:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.rdw-link-decorator-icon {
+  background: transparent;
 }
 
 /* styling the placeholders in different browsers */
